docs: rewrite topics against the current API and consolidate release docs
Doc topics still described the removed Compose Stack B, the old
TranscriptionConfig fields, and a nonexistent Kodio.transcribe API. Rewrite
them against the post-cleanup surface, update versions from the catalog,
make RELEASE_CHECKLIST.md the single release source, correct the CI
description in the repo rules, and strip emoji and em-dashes per the style
rules.