@@ -1,6 +1,10 @@
+[//]: # (title: Platform Setup)
 
+<show-structure for="chapter" depth="2"/>
 
-**Platform requirements**: Android needs initialization, Apple platforms need Info.plist entries, Web needs HTTPS.
+<tldr>
+<p><b>Platform requirements</b>: Android needs initialization, Apple platforms need Info.plist entries, Web needs HTTPS.</p>
+</tldr>
 
 Each platform has specific requirements for audio recording. This guide walks you through the setup for each supported platform.
 
@@ -8,19 +12,13 @@ Each platform has specific requirements for audio recording. This guide walks yo
 
 Android requires both a manifest permission and runtime initialization.
 
-
-
 Add the microphone permission to your `AndroidManifest.xml`:
 
 ```xml
 <uses-permission android:name="android.permission.RECORD_AUDIO" />
 ```
 
-
-
 Initialize Kodio before recording. The recommended approach is to call `Kodio.initialize()` from your main Activity, which wires up both the application context and permission handling in one step:
-
-
 
 ```kotlin
 class MainActivity : ComponentActivity() {
@@ -37,8 +35,6 @@ class MainActivity : ComponentActivity() {
     }
 }
 ```
-
-
 
 If you prefer initializing in your `Application` class, note that this only sets the application context. Permission handling must be wired separately from an Activity.
 
@@ -58,10 +54,6 @@ Register it in your manifest:
     android:name=".MyApp"
     ...>
 ```
-
-
-
-
 
 > **Important**: You must call `Kodio.initialize()` before any recording operations. If you forget, Kodio will throw an `AudioError.NotInitialized` error.
 
@@ -92,12 +84,13 @@ produces audibly noisy or grainy playback even when the host mic is clean
 Mitigations that help in practice:
 
 1. **Match the host's preferred format.** Request `AudioQuality.High`
-  (48 kHz / Int16 / mono) or `AudioQuality.Standard` so the emulator's
+   (48 kHz / Int16 / mono) or `AudioQuality.Standard` so the emulator's
    audio bridge does not need to resample.
 2. **Configure the AVD to use the host audio backend directly.** From the
-  command line:
+   command line, start the emulator with explicit audio settings for your AVD
+   (for example `-qemu -audiodev coreaudio` on macOS hosts).
 3. **Test on a physical device** for production audio quality validation.
-  The emulator bridge is a known weak link and is not representative of
+   The emulator bridge is a known weak link and is not representative of
    on-device capture.
 
 If the noise persists after the steps above, please attach a host-mic recording
@@ -107,11 +100,7 @@ plus the emulator-recorded version to the GitHub issue so we can compare.
 
 iOS requires a usage description in your Info.plist explaining why your app needs microphone access.
 
-
-
 Open your Xcode project and locate `Info.plist` (or your app's info dictionary).
-
-
 
 Add the microphone usage description key:
 
@@ -119,8 +108,6 @@ Add the microphone usage description key:
 <key>NSMicrophoneUsageDescription</key>
 <string>This app needs microphone access to record audio.</string>
 ```
-
-
 
 > Customize the description string to match your app's use case. Apple reviews these descriptions during app review.
 
@@ -130,16 +117,12 @@ Add the microphone usage description key:
 
 macOS requires both an Info.plist entry and a sandbox entitlement for production apps.
 
-
-
 Add the microphone usage description to `Info.plist`:
 
 ```xml
 <key>NSMicrophoneUsageDescription</key>
 <string>This app needs microphone access to record audio.</string>
 ```
-
-
 
 Add the audio input entitlement to your `.entitlements` file:
 
@@ -148,13 +131,27 @@ Add the audio input entitlement to your `.entitlements` file:
 <true/>
 ```
 
-
-
 ### Native audio backend {id="macos-native-audio"}
 
-On macOS, Kodio uses native CoreAudio via Panama FFI for optimal audio quality and device support. This requires **Java 21 or later**.
+On macOS JVM, Kodio uses native CoreAudio via Panama FFI for optimal audio quality and device support. This requires **JDK 22 or later** (Panama FFI was finalized in JDK 22). Kodio's JVM toolchain targets JDK 22.
 
 If the native library isn't available, Kodio automatically falls back to JavaSound.
+
+### JVM native access flag {id="jvm-native-access"}
+
+On **JDK 24 and later**, the JVM may warn about restricted native access when Kodio loads the CoreAudio library. Pass this flag to silence the warnings:
+
+```bash
+java --enable-native-access=ALL-UNNAMED -jar your-app.jar
+```
+
+For Gradle run tasks:
+
+```kotlin
+tasks.withType<JavaExec> {
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
+}
+```
 
 ### Development troubleshooting {id="macos-dev-troubleshooting" collapsible="true"}
 
@@ -162,7 +159,7 @@ When running from an IDE or Terminal during development, you may encounter silen
 
 **Solution**: Go to **System Settings → Privacy & Security → Microphone** and enable access for:
 
-- Your IDE (IntelliJ IDEA, Android Studio, Cursor, etc.)
+- Your IDE (IntelliJ IDEA, Android Studio, Cursor, and so on)
 - Terminal.app (if running from command line)
 
 > The Kodio permission check may report "Granted" while audio is silent. This is because the permission API checks AVFoundation permissions, but audio capture uses CoreAudio which has a separate permission scope tied to the parent app.
@@ -182,16 +179,16 @@ fun main() = runBlocking {
 }
 ```
 
+On macOS JVM, native CoreAudio is used when available (see [macOS native audio backend](#macos-native-audio)).
+
 ### System properties {id="jvm-system-properties" collapsible="true"}
 
 Kodio supports the following system properties for JVM configuration:
-
 
 | Property                           | Default | Description                                                                                                                                                              |
 | ---------------------------------- | ------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | `kodio.useJavaSound`               | `false` | Force using JavaSound (javax.sound.sampled) instead of native CoreAudio on macOS.                                                                                        |
 | `kodio.jvm.recording.warmupMillis` | `200`   | Number of milliseconds of audio read-and-discarded after the JavaSound `TargetDataLine` starts, to swallow the priming silence (GitHub issue #5). Set to `0` to disable. |
-
 
 **When to use `kodio.useJavaSound`:**
 
@@ -201,9 +198,9 @@ Kodio supports the following system properties for JVM configuration:
 
 **When to tune `kodio.jvm.recording.warmupMillis`:**
 
-- Lower it (e.g. `50`) if you're capturing extremely short snippets and the
+- Lower it (for example `50`) if you're capturing extremely short snippets and the
 warmup is eating real audio
-- Raise it (e.g. `400`) if your JDK / OS combination has a slower priming
+- Raise it (for example `400`) if your JDK / OS combination has a slower priming
 ramp than 200 ms. Symptoms are silence at the start of recordings on JVM
 - Set it to `0` to disable the drain entirely (useful when measuring raw
 JavaSound latency)
@@ -231,18 +228,11 @@ java -Dkodio.useJavaSound=true -jar your-app.jar
 
 Web platforms require HTTPS and browser permission prompts.
 
-
-
 Ensure your site is served over **HTTPS** (or localhost for development). Browsers block microphone access on insecure origins.
-
-
 
 The browser will automatically prompt the user for microphone permission when you call `Kodio.record()`.
 
-
-
 ### Browser compatibility {id="browser-compat" collapsible="true"}
-
 
 | Browser | Support        |
 | ------- | -------------- |
@@ -251,20 +241,16 @@ The browser will automatically prompt the user for microphone permission when yo
 | Safari  | Full support |
 | Edge    | Full support |
 
-
 > Users must grant permission through the browser's native dialog. There's no way to bypass this.
 
 {style="note"}
 
 ## Quick reference {id="quick-reference"}
 
-
 | Platform   | Permission         | Initialization               | Extra                       |
 | ---------- | ------------------ | ---------------------------- | --------------------------- |
 | Android    | Manifest + Runtime | `Kodio.initialize(activity)` | None                        |
 | iOS        | Info.plist         | None                         | None                        |
-| macOS      | Info.plist         | None                         | Entitlement, Java 21+       |
-| JVM        | None               | None                         | `kodio.useJavaSound` option |
+| macOS      | Info.plist         | None                         | Entitlement, JDK 22+ (JVM native path) |
+| JVM        | None               | None                         | `kodio.useJavaSound` option, `--enable-native-access=ALL-UNNAMED` on JDK 24+ |
 | Web        | Browser prompt     | None                         | HTTPS                       |
-
-
